# S7_AKG_L1

./: .gitignore  CMakeLists.txt  launch.bat
include/: CSClipper.hpp  Camera.hpp  Engine.hpp  Globals.hpp  Math.hpp  Matrix.hpp  ObjInfo.hpp  ObjParser.hpp  Object.hpp  SHClipper.hpp  Scene.hpp  Types.hpp  Vertex.hpp
include/Commands/: CentralizeCameraCommand.hpp  CloseCommand.hpp  MoveCameraCommand.hpp  MoveObjectCommand.hpp  ResizeCommand.hpp  RotateCameraAroundCommand.hpp  SculptorPullCommand.hpp  SwitchVideoModeCommand.hpp
include/Commands/Base/: Command.hpp  MoveCommand.hpp  TimedCommand.hpp
include/Components/: Camera.hpp  DrawableVertex.hpp  Material.hpp  Object.hpp  Scene.hpp
include/Components/EntryTypes/: BaseVertex.hpp  NormalVertex.hpp  Polygon.hpp  TextureVertex.hpp  Vertex.hpp  VertexIds.hpp
include/Components/LightSources/: BaseLightSource.hpp  DirectLight.hpp  SpotLight.hpp
include/EntryTypes/: BaseVertex.hpp  Entry.hpp  NormalVertex.hpp  Polygon.hpp  TextureVertex.hpp  Vertex.hpp  VertexIds.hpp  VertexIndexes.hpp
include/Helpers/: Converter.hpp  Enums.hpp  Math.hpp  Pool.hpp  ThreadPool.hpp  Timer.hpp  Types.hpp
include/Matrixes/: CoordinateVector.hpp  Matrix.hpp  MatrixBaseStorage.hpp  MatrixDynamicStorage.hpp  MatrixStaticStorage.hpp  MatrixStorageProvider.hpp
include/Systems/: BarycentricRasterizer.hpp  EarClipper.hpp  Engine.hpp  ObjParser.hpp  SHClipper.hpp
include/Systems/Clipping/: CSClipper.hpp  SHClipper.hpp
include/Systems/Editing/: Sculptor.hpp
include/Systems/Lighting/: BaseLightingModel.hpp  LambertModel.hpp  PhongModel.hpp
include/Systems/Parsing/: BaseTextParser.hpp  ImageParser.hpp  MtlParser.hpp  ObjParser.hpp
include/Types/: ConvertsCache.hpp  Enums.hpp  Matrix.hpp  Point.hpp  SphericalCoordinate.hpp  TSQueue.hpp  Texture.hpp  Triangle.hpp  Types.hpp
include/Types/Graph/: Graph.hpp  Node.hpp
include/UI/: MainWindow.hpp
src/: Camera.cpp  Engine.cpp  Globals.cpp  Math.cpp  Matrix.cpp  ObjInfo.cpp  ObjParser.cpp  Object.cpp  SHClipper.cpp  Scene.cpp  Timer.cpp  Vertex.cpp  main.cpp
src/Commands/: CentralizeCameraCommand.cpp  CloseCommand.cpp  MoveCameraCommand.cpp  MoveObjectCommand.cpp  ResizeCommand.cpp  RotateCameraAroundCommand.cpp  SculptorPullCommand.cpp  SwitchVideoModeCommand.cpp
src/Commands/Base/: MoveCommand.cpp  TimedCommand.cpp
src/Components/: Camera.cpp  DrawableVertex.cpp  Material.cpp  Object.cpp  Scene.cpp
src/Components/EntryTypes/: BaseVertex.cpp  NormalVertex.cpp  Polygon.cpp  TextureVertex.cpp  Vertex.cpp  VertexIds.cpp
src/Components/LightSources/: BaseLightSource.cpp  DirectLight.cpp  SpotLight.cpp
src/EntryTypes/: BaseVertex.cpp  Entry.cpp  NormalVertex.cpp  Polygon.cpp  TextureVertex.cpp  Vertex.cpp  VertexIds.cpp  VertexIndexes.cpp
src/Helpers/: Converter.cpp  Math.cpp  ThreadPool.cpp  Timer.cpp  Types.cpp
src/Matrixes/: CoordinateVector.cpp  Matrix.cpp  MatrixBaseStorage.cpp  MatrixDynamicStorage.cpp  MatrixStaticStorage.cpp  MatrixStorageProvider.cpp
src/Systems/: BarycentricRasterizer.cpp  EarClipper.cpp  Engine.cpp  ObjParser.cpp
src/Systems/Clipping/: CSClipper.cpp  SHClipper.cpp
src/Systems/Editing/: Sculptor.cpp
src/Systems/Lighting/: BaseLightingModel.cpp  LambertModel.cpp  PhongModel.cpp
src/Systems/Parsing/: BaseTextParser.cpp  ImageParser.cpp  MtlParser.cpp  ObjParser.cpp
src/Types/: ConvertsCache.cpp  DrawableVertex.cpp  Matrix.cpp  Point.cpp  SphericalCoordinate.cpp  Texture.cpp  Triangle.cpp  VertexIds.cpp
src/Types/Graph/: Graph.cpp
src/UI/: MainWindow.cpp
